# AndroidNativeSurface

./: .gitmodules
android_native_surface/: Cargo.toml
android_native_surface/src/: android.rs  lib.rs  main.rs  pure_gl.rs
app/: build.gradle
app/src/main/java/rust/androidnativesurface/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
