[package]
name = "android_native_surface"
version = "0.1.0"
authors = ["Marijn Suijten <marijns95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
android=["ndk", "libc"]

[dependencies]
android_logger = "0.11"
glutin = "0.28"
glium = "*"
jni = "0.19"
log = "0.4"
ndk = { git = "https://github.com/rust-windowing/android-ndk-rs", features = ["api-level-28"], optional=true }
libc = {version="0.2", optional=true}

[build-dependencies]
gl_generator = "0.14"

[patch.crates-io]
glutin={git="https://github.com/lattice0/glutin", branch="android"}
glium = {path="./glium"}
